--- a/PDP/PDP/Views/Doctors/Delete.cshtml
+++ b/PDP/PDP/Views/Doctors/Delete.cshtml
@@ -4,85 +4,22 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete the doctor @Model.FirstName @Model.SecondName?</h3>
+<h5 style="font-style:italic">This changes will not be reversible</h5>
+<img src="@Model.Photo" style="width:16em;" />
 <div>
-    <h4>Doctor</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SecondName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SecondName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SpecializationID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SpecializationID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAvailable)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsAvailable)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PriceRate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PriceRate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Rating)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
+        <br />
+        <div class="row">
+            <div class="col-sm-1">
+                <a class="btn btn-warning" href="/Doctors">Abort</a>
+            </div>
+            <div class="col-sm-1">
+                <input type="submit" value="Delete" class="btn btn-danger" />
+            </div>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
