Fixed burger image.

--- a/PDP/PDP/Views/Shared/_Layout.cshtml
+++ b/PDP/PDP/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@ body { background: linear-gradient( rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) ); 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container" style="float:left">
             <div class="navbar-header">
-                <img type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" src="https://www.flaticon.com/svg/vstatic/svg/3917/3917215.svg?token=exp=1670632048~hmac=f0c2e5740c93b7da1b3d14286f72720d" style="height:1.5em;"/>
+                <img type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" src="https://banner2.cleanpng.com/20180628/zaz/kisspng-computer-icons-hamburger-button-menu-new-menu-5b34724be5a1f0.5796308115301637879406.jpg" style="height:1.5em;"/>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
