Consultation appointment from doctor page

--- a/PDP/PDP/Views/Consultations/Index.cshtml
+++ b/PDP/PDP/Views/Consultations/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Specializations available in the application</h2>
 <br />
 
-<a class="btn btn-primary" href="/Specializations/Create">Add specialization</a>
+<a class="btn btn-primary" href="/Doctors/Index">Add consultation</a>
 <hr />
 <br />
 
