--- a/PDP/PDP/Views/Consultations/Index.cshtml
+++ b/PDP/PDP/Views/Consultations/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewBag.Title</h2>
 <br />
 
-<h2>Specializations available in the application</h2>
+<h2>Consultations available in the application</h2>
 <br />
 
 <a class="btn btn-primary" href="/Doctors/Index">Add consultation</a>
