--- a/PDP/PDP/Views/Consultations/Create.cshtml
+++ b/PDP/PDP/Views/Consultations/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(actionName: "Create", controllerName: "Consultations"))
 {
     @Html.AntiForgeryToken()
 
@@ -19,36 +19,41 @@
     <p>@ViewBag.firstName @ViewBag.secondName</p>
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Price</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group">
+    <div class="control-label col-md-2">
+        <h6>Price</h6>
+    </div>
+    <div class="col-md-10">
+        @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
+    </div>
 
-        <br />
+    <br />
 
-        <div class="control-label col-md-2">
-            <h6>Date</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.date_day, "{0:dd.MM.yyyy}", new { @class = "date-picker fullwidth", data_date_format = "dd.mm.yyyy" })
-            @Html.ValidationMessageFor(model => model.date_day, "", new { @class = "text-danger" })
-        </div>
+    <div class="control-label col-md-2">
+        <h6>Date</h6>
+    </div>
+    <div class="col-md-10">
+        @Html.TextBoxFor(model => model.date_day, "{0:dd.MM.yyyy}", new { @class = "date-picker fullwidth", data_date_format = "dd.mm.yyyy" })
+        @Html.ValidationMessageFor(model => model.date_day, "", new { @class = "text-danger" })
+    </div>
 
-        <br />
+    <br />
 
-        <div class="control-label col-md-2">
-            <h6>Pick a slot</h6>
-        </div>
+    <div class="control-label col-md-2">
+        <h6>Pick a slot</h6>
+    </div>
 
-        <p>9:00 @Html.RadioButtonFor(m => m.slot_hour, "9:00")</p>
-        <p>9:30 @Html.RadioButtonFor(m => m.slot_hour, "9:30")</p>
-        <p>10:00 @Html.RadioButtonFor(m => m.slot_hour, "10:00")</p>
-        <p>10:30 @Html.RadioButtonFor(m => m.slot_hour, "10:30") </p>
-        @Html.ValidationMessageFor(model => model.slot_hour, "", new { @class = "text-danger" })
+    <p>9:00 @Html.RadioButtonFor(m => m.slot_hour, "9:00")</p>
+    <p>9:30 @Html.RadioButtonFor(m => m.slot_hour, "9:30")</p>
+    <p>10:00 @Html.RadioButtonFor(m => m.slot_hour, "10:00")</p>
+    <p>10:30 @Html.RadioButtonFor(m => m.slot_hour, "10:30") </p>
+    @Html.ValidationMessageFor(m => m.slot_hour, "", new { @class = "text-danger" })
+
+    @Html.HiddenFor(m => m.ConsultationID, @Model.ConsultationID)
+    @Html.HiddenFor(m => m.DoctorId, @Model.DoctorId)
+    @Html.HiddenFor(m => m.UserId, @Model.UserId)
+
 </div>
 
 
