--- a/PDP/PDP/Views/Doctors/Edit.cshtml
+++ b/PDP/PDP/Views/Doctors/Edit.cshtml
@@ -18,7 +18,7 @@
     </div>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.DoctorID)
+    @Html.HiddenFor(model => model.DoctorId)
 
     <div class="form-group">
         <div class="control-label col-md-2">
