style: reverted changes to navbar

--- a/PDP/PDP/Views/Shared/_Layout.cshtml
+++ b/PDP/PDP/Views/Shared/_Layout.cshtml
@@ -9,13 +9,13 @@
 </head>
 <style>
 body { background: linear-gradient( rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) ); background-image: url('https://img.freepik.com/free-vector/clean-medical-background-vector_53876-140865.jpg?w=1380&t=st=1670630315~exp=1670630915~hmac=0c94813e76a410487fc3362da95f04206fb45cd544817a337afe7c568f880908'); background-size: cover; background-attachment: fixed; background-position: center; }
-    a {
-        color: black
-    }
+a {
+    color: black
+}
 </style>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container" style="float:left; background-color:lightseagreen; padding-bottom:4px;">
+        <div class="container" style="float:left;">
             <div class="navbar-header">
                 <img type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" src="https://banner2.cleanpng.com/20180628/zaz/kisspng-computer-icons-hamburger-button-menu-new-menu-5b34724be5a1f0.5796308115301637879406.jpg" style="height:1.5em;"/>
             </div>
