Added DELETE and POST for Consultations.

--- a/PDP/PDP/Views/Consultations/Index.cshtml
+++ b/PDP/PDP/Views/Consultations/Index.cshtml
@@ -23,8 +23,8 @@
         <p> @consultation.date_day : @consultation.slot_hour </p>
     </div>
     <div style="float: right; height: 100%">
-        <a class="btn btn-success" href="/Specializations/Edit/@consultation.ConsultationID" style="display: inline-block; margin-right: 1em;">Edit</a>
-        <a class="btn btn-danger" href="/Specializations/Delete/@consultation.ConsultationID" style="display: inline-block;">Delete</a>
+        <a class="btn btn-success" href="/Consultations/Edit/@consultation.ConsultationID" style="display: inline-block; margin-right: 1em;">Edit</a>
+        <a class="btn btn-danger" href="/Consultations/Delete/@consultation.ConsultationID" style="display: inline-block;">Delete</a>
     </div>
     <br />
     <hr />
