--- a/PDP/PDP/Views/Consultations/Create.cshtml
+++ b/PDP/PDP/Views/Consultations/Create.cshtml
@@ -21,16 +21,6 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 <div class="form-group">
     <div class="control-label col-md-2">
-        <h6>Price</h6>
-    </div>
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
-    </div>
-
-    <br />
-
-    <div class="control-label col-md-2">
         <h6>Date</h6>
     </div>
     <div class="col-md-10">
@@ -53,6 +43,8 @@
     @Html.HiddenFor(m => m.ConsultationID, @Model.ConsultationID)
     @Html.HiddenFor(m => m.DoctorId, @Model.DoctorId)
     @Html.HiddenFor(m => m.UserId, @Model.UserId)
+    @Html.HiddenFor(m => m.price, @Model.price)
+
 
 </div>
 
