--- a/PDP/PDP/Views/Consultations/Index.cshtml
+++ b/PDP/PDP/Views/Consultations/Index.cshtml
@@ -19,8 +19,9 @@
 @foreach (var consultation in Model)
 {
     <div style="display: inline-block">
-        <p> @consultation.Doctor.FirstName @consultation.Doctor.SecondName</p>
-        <p> @consultation.date_day : @consultation.slot_hour </p>
+        <p> Doctor: @consultation.Doctor.FirstName @consultation.Doctor.SecondName</p>
+        <p> Ziua: @consultation.date_day ; Ora: @consultation.slot_hour </p>
+        <p> Pret: @consultation.price </p>
     </div>
     <div style="float: right; height: 100%">
         <a class="btn btn-success" href="/Consultations/Edit/@consultation.ConsultationID" style="display: inline-block; margin-right: 1em;">Edit</a>
