Revert "try to fix doctor crashing with float price rate"
This reverts commit 0b9f3d5b0d6a86002e6f659c2dd2b2a72a762d16.

--- a/PDP/PDP/Views/Doctors/Create.cshtml
+++ b/PDP/PDP/Views/Doctors/Create.cshtml
@@ -67,7 +67,7 @@
             <h6>Price rate</h6>
         </div>
         <div class="col-md-10">
-            @Html.EditorFor(model => model.PriceRate, new { htmlAttributes = new { @class = "form-control", type = "number", step = "any", min = "0", max = "100", value = "1.0", lang="en-US" } })
+            @Html.EditorFor(model => model.PriceRate, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.PriceRate, "", new { @class = "text-danger" })
         </div>
     </div>
