--- a/PDP/PDP/Views/Consultations/Delete.cshtml
+++ b/PDP/PDP/Views/Consultations/Delete.cshtml
@@ -10,11 +10,13 @@
 <div>
     <hr />
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
+        @Html.HttpMethodOverride(HttpVerbs.Delete)
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
