--- a/PDP/PDP/Views/Doctors/Delete.cshtml
+++ b/PDP/PDP/Views/Doctors/Delete.cshtml
@@ -11,6 +11,7 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
+        @Html.HttpMethodOverride(HttpVerbs.Delete)
         <br />
         <div class="row">
             <div class="col-sm-1">
