--- a/PDP/PDP/Views/Consultations/Create.cshtml
+++ b/PDP/PDP/Views/Consultations/Create.cshtml
@@ -7,54 +7,55 @@
 
 <h2>Create</h2>
 
+<div class="text-danger">@ViewBag.ConsultationCreateError</div>
 
 @using (Html.BeginForm(actionName: "Create", controllerName: "Consultations"))
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Specializations</h4>
-    <hr />
+    <div class="form-horizontal">
+        <h4>Specializations</h4>
+        <hr />
 
-    <p>@ViewBag.firstName @ViewBag.secondName</p>
+        <p>@ViewBag.firstName @ViewBag.secondName</p>
 
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-<div class="form-group">
-    <div class="control-label col-md-2">
-        <h6>Date</h6>
-    </div>
-    <div class="col-md-10">
-        @Html.TextBoxFor(model => model.date_day, "{0:dd.MM.yyyy}", new { @class = "date-picker fullwidth", data_date_format = "0:dd.mm.yyyy", @type = "date" })
-        @Html.ValidationMessageFor(model => model.date_day, "", new { @class = "text-danger" })
-    </div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="control-label col-md-2">
+                <h6>Date</h6>
+            </div>
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.date_day, "{0:dd.MM.yyyy}", new { @class = "date-picker fullwidth", data_date_format = "0:dd.mm.yyyy", @type = "date" })
+                @Html.ValidationMessageFor(model => model.date_day, "", new { @class = "text-danger" })
+            </div>
 
-    <br />
+            <br />
 
-    <div class="control-label col-md-2">
-        <h6>Pick a slot</h6>
-    </div>
+            <div class="control-label col-md-2">
+                <h6>Pick a slot</h6>
+            </div>
 
-    @for (int i = 15; i < 40; i++)
-    {
-        <span> | @(i/2):@(i%2==0 ? "00":"30") @Html.RadioButtonFor(m => m.slot_hour, i) | </span>
-    }
-    @Html.ValidationMessageFor(m => m.slot_hour, "", new { @class = "text-danger" })
+            @for (int i = 15; i < 40; i++)
+            {
+                <span> | @(i/2):@(i%2==0 ? "00":"30") @Html.RadioButtonFor(m => m.slot_hour, i) | </span>
+            }
+            @Html.ValidationMessageFor(m => m.slot_hour, "", new { @class = "text-danger" })
 
-    @Html.HiddenFor(m => m.ConsultationID, @Model.ConsultationID)
-    @Html.HiddenFor(m => m.DoctorId, @Model.DoctorId)
-    @Html.HiddenFor(m => m.UserId, @Model.UserId)
-    @Html.HiddenFor(m => m.price, @Model.price)
-
-
-</div>
+            @Html.HiddenFor(m => m.ConsultationID, @Model.ConsultationID)
+            @Html.HiddenFor(m => m.DoctorId, @Model.DoctorId)
+            @Html.HiddenFor(m => m.UserId, @Model.UserId)
+            @Html.HiddenFor(m => m.price, @Model.price)
 
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-outline-success" />
+        </div>
+
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-outline-success" />
+            </div>
         </div>
     </div>
-</div>
 }
 
 <div>
