--- a/PDP/PDP/Views/Consultations/Edit.cshtml
+++ b/PDP/PDP/Views/Consultations/Edit.cshtml
@@ -4,61 +4,64 @@
     ViewBag.Title = "Edit";
 }
 
-@using (Html.BeginForm())
+<h2>Edit</h2>
+
+<div class="text-danger">@ViewBag.ConsultationCreateError</div>
+
+@using (Html.BeginForm(actionName: "Edit", controllerName: "Consultations"))
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>Edit consultation</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.ConsultationID)
+    @Html.HttpMethodOverride(HttpVerbs.Put)
 
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Price</h6>
+    <div class="form-horizontal">
+        <h4>Specializations</h4>
+        <hr />
+
+        <p>@ViewBag.firstName @ViewBag.secondName</p>
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="control-label col-md-2">
+                <p>Original Date: @Model.date_day.DayOfWeek, @Model.date_day.Month/@Model.date_day.Day/@Model.date_day.Year</p>
+                <p>Original Time: @(Model.slot_hour/2):@(Model.slot_hour % 2==0 ? "00":"30")</p>
+            </div>
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.date_day, "{0:dd.MM.yyyy}", new { @class = "date-picker fullwidth", data_date_format = "0:dd.mm.yyyy", @type = "date" })
+                @Html.ValidationMessageFor(model => model.date_day, "", new { @class = "text-danger" })
+            </div>
+
+            <br />
+
+            <div class="control-label col-md-2">
+                <h6>Pick a slot</h6>
+            </div>
+
+            @for (int i = 15; i < 40; i++)
+            {
+                <span> | @(i/2):@(i%2==0 ? "00":"30") @Html.RadioButtonFor(m => m.slot_hour, i) | </span>
+            }
+            @Html.ValidationMessageFor(m => m.slot_hour, "", new { @class = "text-danger" })
+
+            @Html.HiddenFor(m => m.ConsultationID, @Model.ConsultationID)
+            @Html.HiddenFor(m => m.DoctorId, @Model.DoctorId)
+            @Html.HiddenFor(m => m.UserId, @Model.UserId)
+            @Html.HiddenFor(m => m.price, @Model.price)
+
+
         </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
+
+
+        <div class="row">
+            <div class="col-sm-1">
+                <input type="submit" value="Create" class="btn btn-success" />
+            </div>
+            <div class="col-sm-1">
+                <a class="btn btn-warning" href="/Consultations">Abort</a>
+            </div>
         </div>
-
-        <br />
-
-        <div class="control-label col-md-2">
-            <h6>Date</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.date_day, "{0:dd.MM.yyyy}", new { @class = "date-picker fullwidth", data_date_format = "dd.mm.yyyy" })
-            @Html.ValidationMessageFor(model => model.date_day, "", new { @class = "text-danger" })
-        </div>
-
-        <br />
-
-        <div class="control-label col-md-2">
-            <h6>Pick a slot</h6>
-        </div>
-
-        <p>9:00 @Html.RadioButtonFor(m => m.slot_hour, "9:00")</p>
-        <p>9:30 @Html.RadioButtonFor(m => m.slot_hour, "9:30")</p>
-        <p>10:00 @Html.RadioButtonFor(m => m.slot_hour, "10:00")</p>
-        <p>10:30 @Html.RadioButtonFor(m => m.slot_hour, "10:30") </p>
-        @Html.ValidationMessageFor(m => m.slot_hour, "", new { @class = "text-danger" })
-
-        @Html.HiddenFor(m => m.ConsultationID, @Model.ConsultationID)
-        @Html.HiddenFor(m => m.DoctorId, @Model.DoctorId)
-        @Html.HiddenFor(m => m.UserId, @Model.UserId)
-
     </div>
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-success" />
-        </div>
-    </div>
-</div>
 }
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
