--- a/PDP/PDP/Views/Consultations/Index.cshtml
+++ b/PDP/PDP/Views/Consultations/Index.cshtml
@@ -21,7 +21,9 @@
     <div style="display: inline-block">
         <p> Doctor: @consultation.Doctor.FirstName @consultation.Doctor.SecondName</p>
         <p> Pret: @consultation.price </p>
-        <p> @consultation.date_day.ToString("dd.mm.yyyy") : @consultation.slot_hour </p>
+        <p>Date: @consultation.date_day.DayOfWeek, @consultation.date_day.Month/@consultation.date_day.Day/@consultation.date_day.Year</p>
+        <p>Time: @(consultation.slot_hour/2):@(consultation.slot_hour % 2==0 ? "00":"30")</p>
+
     </div>
     <div style="float: right; height: 100%">
         <a class="btn btn-success" href="/Consultations/Edit/@consultation.ConsultationID" style="display: inline-block; margin-right: 1em;">Edit</a>
